--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/akelstrom/refrigerator/issues"
   },
-  "homepage": "https://github.com/akelstrom/refrigerator#readme"
+  "homepage": "https://github.com/akelstrom/refrigerator#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.0",
+    "connect-session-sequelize": "^7.1.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
+  }
 }
