--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "bcrypt": "^5.0.0",
     "connect-session-sequelize": "^7.1.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
+    "express-session": "^1.17.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.5.0"
   },
   "devDependencies": {
     "jest": "^26.6.3"
