--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "sequelize": "^6.5.0"
   },
   "devDependencies": {
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "morgan": "^1.10.0"
   },
   "keywords": []
 }
