--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.4.18",
     "sequelize": "^6.5.0"
   },
   "devDependencies": {
