just some css tweaks- all buttons are consistent- failed on color palete

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/akelstrom/refrigerator#readme",
   "dependencies": {
+    "autoprefixer": "^10.2.4",
     "bcrypt": "^5.0.0",
     "connect-session-sequelize": "^7.1.1",
     "dotenv": "^8.2.0",
@@ -25,7 +26,9 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.5.0"
+    "postcss": "^8.2.6",
+    "sequelize": "^6.5.0",
+    "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
     "jest": "^26.6.3"
