--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/akelstrom/refrigerator#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "connect-session-sequelize": "^7.1.1",
     "dotenv": "^8.2.0",
@@ -27,9 +28,9 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.4.18",
     "postcss-cli": "^8.3.1",
     "postcss-import": "^14.0.0",
-    "nodemailer": "^6.4.18",
     "sequelize": "^6.5.0"
   },
   "devDependencies": {
