--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/akelstrom/refrigerator#readme",
   "dependencies": {
+    "all": "0.0.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "connect-session-sequelize": "^7.1.1",
@@ -28,6 +29,7 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
+    "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.18",
     "postcss-cli": "^8.3.1",
     "postcss-import": "^14.0.0",
